plugins {
    id 'java'
    id 'application'
}

group 'com.deepster.eurovision'
version '1.0-SNAPSHOT'
sourceCompatibility = 11
targetCompatibility = 11
mainClassName = 'com.deepster.eurovision.Application'


applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    compile 'com.google.inject:guice:4.2.2:no_aop'
    compile 'com.sparkjava:spark-core:2.9.1'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
    compile 'io.lettuce:lettuce-core:5.1.6.RELEASE'
    compile "com.typesafe:config:1.3.1"
    compile "org.slf4j:slf4j-api:1.7.30"
    compile "ch.qos.logback:logback-classic:1.2.3"
    compile 'org.logback-extensions:logback-ext-loggly:0.1.2'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
    testCompile 'io.rest-assured:rest-assured:4.2.0'
    testCompile 'com.github.kstyrc:embedded-redis:0.6'
    testCompile 'io.rest-assured:json-path:4.2.0'
}
